# fastapi-tutorial

./: .gitignore  Dockerfile  Makefile  config.py  converter.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  routers.py  schemas.py  sql_app.db
alembic/versions/: 3f8d13cf0276_create_user_and_item_table.py
app/: database.py  main.py  models.py  oauth2.py  schemas.py
app/db/: connection.py  models.py
app/migrations/: env.py
app/migrations/versions/: 0c6578d51ee2_add_users_table.py  40b9f083c9fc_add_categories_table.py  7b7c8a1d7ca0_add_product_table.py
app/routers/: auth.py  category_routers.py  deps.py  item.py  poc.py  product_routers.py  user.py  user_routers.py
app/schemas/: category.py  product.py  user.py
app/test/: conftest.py
app/test/routers/: test_category_routers.py  test_product_routers.py  test_user_routers.py
app/test/schemas/: test_category_schema.py  test_product_schema.py  test_user_schema.py
app/test/use_cases/: test_category_use_cases.py  test_product_use_cases.py  test_user_use_cases.py
app/use_cases/: category.py  poc.py  product.py  user.py
