[tool.poetry]
name = "fastapi-tutorial"
version = "0.1.0"
description = ""
authors = ["jewon119 <jewon119@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_tutorial"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.99.1"
uvicorn = "^0.22.0"
requests = "^2.31.0"
aiohttp = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
